src/test/ui/span/destructor-restrictions.nll.stderr
error[E0597]: `*a` does not live long enough
  --> $DIR/destructor-restrictions.rs:18:10
   |
LL |         *a.borrow() + 1
   |          ^---------
   |          |
   |          borrowed value does not live long enough
   |          borrow may end up in a temporary, created here
LL |     }; //~^ ERROR `*a` does not live long enough
   |     -- temporary later dropped here, potentially using the reference
   |     |
   |     borrowed value only lives until here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
